--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body {
-	background: #0f9;
-}
-
 .item {
 	padding: 20px
 }
@@ -12,6 +8,8 @@ body {
 	width: 60%;
 	margin: 20px auto;
 	padding: 20px 20px;
+	border: solid 1px black;
+	box-shadow: 0 10px 6px -6px #777;
 }
 
 p {
