--- a/style.css
+++ b/style.css
@@ -19,3 +19,9 @@ p {
 .author {
 	padding-bottom: 1em;
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+.content {
+	width: 100%;
+}
+}
